@@ -21,7 +21,6 @@ def runSimulation(worDir):
     try:
         logFilNam=os.path.join(worDir, 'stdout.log')
         logFil = open(logFilNam, 'w')
-        print "Starting simulation in ", worDir
         t = u.Tester()
         retcode = subprocess.Popen(args=[t.getModelicaCommand(), "runAll.mos", "/nowindow"], 
                                    stdout=logFil,
@@ -834,7 +833,7 @@ class Tester:
                         i=i+1
         fil.close() #Closes the file (read session)
         if (i>0):
-                self.__reporter.writeError("Unit tests had" + str(i) + "error(s).\n" + \
+                self.__reporter.writeError("Unit tests had " + str(i) + " error(s).\n" + \
                                                "Search 'dymola.log' for 'false' to see details.\n")
 
         self.__reporter.writeOutput("Script that runs unit tests had " + \
@@ -915,7 +914,7 @@ class Tester:
         nUniTes = 0
 
         nTes = len(self.__data)
-        for iPro in range(self.__nPro):
+        for iPro in range(min(self.__nPro, nTes)):
 
             runFil=open(os.path.join(self.__temDir[iPro], "Buildings", "runAll.mos"), 'w')
             runFil.write("// File autogenerated for process " 
@@ -924,10 +923,7 @@ class Tester:
             runFil.write("openModel(\"package.mo\");\n")
             runFil.write("Modelica.Utilities.Files.remove(\"dymola.log\");\n")
             # Write unit tests for this process
-            pSta=int(round(iPro*nTes/self.__nPro))
-            pEnd=int(round((iPro+1)*nTes/self.__nPro))
-
-            for i in range(pSta-1,pEnd-1):
+            for i in range(iPro, nTes, self.__nPro):
                 # Check if this mos file should be simulated
                 if self.__data[i].simulateFile():
                     # Write line for run script
